--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,7 +4,7 @@
 
 	"features": {
 		"ghcr.io/va-h/devcontainers-features/uv:1" : {},
-		"ghcr.io/devcontainers-community/features/deno:1" : {}
+		"ghcr.io/devcontainers/features/node:1" : {}
 	},
 
 	"postCreateCommand": "sudo apt-get update && sudo apt-get install -y xclip wl-clipboard && sudo curl -L -o /usr/local/bin/codesnap 'https://github.com/SomaRe/codesnap/releases/latest/download/codesnap-linux-amd64' && sudo chmod +x /usr/local/bin/codesnap",
@@ -14,7 +14,8 @@
 			"extensions": [
 				"ms-python.python",
 				"bradlc.vscode-tailwindcss",
-				"denoland.vscode-deno"
+				"denoland.vscode-deno",
+				"svelte.svelte-vscode"
 			]
 		}
 	}
